($Id: ChangeLog,v 1.46 2001-06-13 15:44:45 rufustfirefly Exp $)

2001-06-11  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, include/atalk/adouble.h, libatalk/compat/flock.c:
	patch #431859 to avoid ucbinclude on Solaris, with flock support,
	thanks to Russ Allbery (rra@users.sourceforge.net)

	* acconfig.h, configure.in, libatalk/util/server_child.c,
	libatalk/util/server_lock.c, sys/netatalk/endian.h: patch #432052
	for portability to IRIX, HP-UX, and AIX (Russ Allbery)

	* etc/afpd/nls/makecode.c: patch #432137 to add codepage mapping
	support for (C), (TM) and other characters to avoid losing them,
	submitted by Andre Schild (aschild@users.sourceforge.net)

	* configure.in: set sysconfdir as /etc/netatalk by default, and
	uams path now pulls from sysconfdir instead of config_dir
	(Sam Noble)

2001-06-07  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, bin/afppasswd/Makefile.am,
	contrib/shell_utils/Makefile.am, distrib/initscripts/Makefile.am,
	etc/afpd/Makefile.am, etc/afpd/nls/Makefile.am,
	etc/atalkd/Makefile.am, etc/papd/Makefile.am,
	man/man5/Makefile, man/man8/Makefile.am: patch #422872 from
	Sebastian Rittau to move from CONFIG_DIR to sysconfdir

	* etc/psf/Makefile.am, sys/solaris/Makefile: additional removal
	of CONFIG_DIR in favor of sysconfdir, plus patch #422860 from
	Sebastian Rittau to correct other problems

	* config/Makefile.am, config/netatalk.pamd: patch #422856 from
	Sebastian Rittau, moving to pam_unix.so and being more proper

	* etc/afpd/Makefile.am, etc/afpd/main.c: added support for
	${sysconfdir}/afpd.mtab to be read into memory, so that mtab
	DID support actually works...

2001-06-06  jeff b  <jeff@univrel.pr.uconn.edu>
	* etc/afpd/filedir.c, etc/afpd/unix.c: fixed dropkludge code
	so that it properly compiles again, along with minor warning
	fixen

2001-06-05 Dan L. (pooba53)
	* Modified configure.in so references made to $ac_prefix_default
	listed at the beginning are correct. The previous references were